# CloudDriftDetector

./: README.md  pyproject.toml
src/ai_driven_infrastructure_compliance_and_drift_detection/: crew.py  main.py
src/ai_driven_infrastructure_compliance_and_drift_detection/config/: agents.yaml  tasks.yaml
src/ai_driven_infrastructure_compliance_and_drift_detection/tools/: custom_tool.py  slack_notifier.py
