[project]
name = "ai_driven_infrastructure_compliance_and_drift_detection"
version = "0.1.0"
description = "ai_driven_infrastructure_compliance_and_drift_detection using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
ai_driven_infrastructure_compliance_and_drift_detection = "ai_driven_infrastructure_compliance_and_drift_detection.main:run"
run_crew = "ai_driven_infrastructure_compliance_and_drift_detection.main:run"
train = "ai_driven_infrastructure_compliance_and_drift_detection.main:train"
replay = "ai_driven_infrastructure_compliance_and_drift_detection.main:replay"
test = "ai_driven_infrastructure_compliance_and_drift_detection.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
